Fix image alignment

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -48,6 +48,7 @@ section.page-header {
     width: 100%;
     margin: 1em 0;
     padding: 1em 0;
+    text-align: center;
     background-image: linear-gradient(to bottom, #EEEEEE 60%, #CCCCCC 90%, #BBBBBB 100%);
 
     img {
